[package]
name = "quinezero"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-peers = "0.4.1"
rand_chacha = { version = "0.3.1", default-features = false }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
warp = "0.3.3"
prokio = "0.1.0"
tokio = { version = "1.26.0", features = ["full"] }
wgpu = "0.15.1"
futures = "0.3.27"
atomic = "0.5"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "Window",
  "Element"
]


[[bin]]
name = "asha"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"